# Wolfram

./: ,gitignore  .gitignore  CMakeLists.txt  main.cpp
engine/: Application.hpp  Camera.hpp  Renderer.hpp  RendererGL.hpp  ShaderGL.hpp  Window.hpp
extra/: Helper.hpp
shaders/: shader.frag  shader.vert
